Fixed dropdown menu on mobile phones

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -488,7 +488,7 @@ ul {
   justify-content: center;
   position: relative;
 }
-@media not (hover: hover) {
+@media not (hover: hover), screen and (max-width: 1024px) {
   .header__wrapper {
     margin-bottom: 7rem;
   }
@@ -578,7 +578,7 @@ ul {
     flex-direction: column;
   }
 }
-@media not (hover: hover) {
+@media not (hover: hover), screen and (max-width: 1024px) {
   .navigation__item .submenu {
     display: flex;
     flex-direction: column;
