--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    @media not (hover: hover) {
+    @media not (hover: hover), screen and (max-width: 1024px){
       margin-bottom: 7rem;
     }
   }
